Updated head alignment, trying to fix carousel

--- a/variables.scss
+++ b/variables.scss
@@ -19,6 +19,6 @@ $ci-darkblue: #1a587a;
 $grey-1: #FAFAFA;
 $grey-2: rgba(0, 0, 0, 0.29);
 
-$head-height: 3.8rem;
+$head-height: 3.65rem;
 $hero-height: 70vh;
 $hero-height-home: calc(100vh - #{$head-height});
