--- a/wp-content/themes/MMM35/styles/index.scss
+++ b/wp-content/themes/MMM35/styles/index.scss
@@ -20,7 +20,7 @@ html {
   color: $foreground;
   font-size: 16px;
 
-  @media screen and (min-width: $wp-admin-bar-breakpoint) { 
+  @media screen and (min-width: $tablet-min) { 
     font-size: 22px;
   }
 }
